--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="go8-Ac-Ske">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -9,6 +9,29 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Tab Bar Controller-->
+        <scene sceneID="1Ef-Lf-ZCM">
+            <objects>
+                <tabBarController id="go8-Ac-Ske" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="sSb-Xh-F3i">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" name="YP Black"/>
+                        <color key="barTintColor" name="YP White"/>
+                        <color key="selectedImageTintColor" name="YP White"/>
+                        <tabBarAppearance key="standardAppearance">
+                            <color key="backgroundColor" name="YP Black"/>
+                        </tabBarAppearance>
+                    </tabBar>
+                    <connections>
+                        <segue destination="NNs-4v-f7P" kind="relationship" relationship="viewControllers" id="y4j-OS-uBV"/>
+                        <segue destination="Bym-FV-l44" kind="relationship" relationship="viewControllers" id="tEa-na-Ylx"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="h9p-0H-23d" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1735" y="-317"/>
+        </scene>
         <!--ImageList-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -88,17 +111,187 @@
                             <constraint firstAttribute="bottom" secondItem="VDL-b5-AHQ" secondAttribute="bottom" id="yP0-dL-XvY"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="wg3-HB-pyq"/>
+                    <connections>
+                        <segue destination="I2T-pb-lHc" kind="presentation" identifier="ShowSingleImage" id="j6z-LW-g33"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="121.73913043478262" y="104.46428571428571"/>
+            <point key="canvasLocation" x="215.94202898550725" y="-667.63392857142856"/>
+        </scene>
+        <!--Single Image View Controller-->
+        <scene sceneID="Aab-Zk-Ccz">
+            <objects>
+                <viewController modalPresentationStyle="fullScreen" id="I2T-pb-lHc" customClass="SingleImageViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fYh-dc-x2U">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="U5c-lJ-xyi">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="wug-c8-mx3">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                </subviews>
+                                <viewLayoutGuide key="contentLayoutGuide" id="M1O-qi-bx0"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="DbA-1j-1Wr"/>
+                                <connections>
+                                    <outlet property="delegate" destination="I2T-pb-lHc" id="uKZ-wQ-Ww4"/>
+                                </connections>
+                            </scrollView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dka-Lx-Pxx">
+                                <rect key="frame" x="8" y="52" width="48" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="2wg-Od-Apw"/>
+                                    <constraint firstAttribute="width" constant="48" id="IzW-pP-wVy"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="Backward">
+                                    <color key="titleColor" name="YP White"/>
+                                </state>
+                                <connections>
+                                    <action selector="didTapBackButton:" destination="I2T-pb-lHc" eventType="touchUpInside" id="bUX-P9-BuM"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nvw-iQ-mVy">
+                                <rect key="frame" x="182" y="796" width="50" height="50"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="share_button"/>
+                                <connections>
+                                    <action selector="didTapShareButton:" destination="I2T-pb-lHc" eventType="touchUpInside" id="FgF-QA-Eun"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="cPZ-2y-jC9"/>
+                        <color key="backgroundColor" name="YP Black"/>
+                        <constraints>
+                            <constraint firstItem="nvw-iQ-mVy" firstAttribute="centerX" secondItem="cPZ-2y-jC9" secondAttribute="centerX" id="0U2-KA-knB"/>
+                            <constraint firstItem="dka-Lx-Pxx" firstAttribute="top" secondItem="cPZ-2y-jC9" secondAttribute="top" constant="8" id="GcA-go-Sc9"/>
+                            <constraint firstItem="cPZ-2y-jC9" firstAttribute="bottom" secondItem="nvw-iQ-mVy" secondAttribute="bottom" constant="16" id="cEr-Ux-fD6"/>
+                            <constraint firstItem="dka-Lx-Pxx" firstAttribute="leading" secondItem="cPZ-2y-jC9" secondAttribute="leading" constant="8" id="uhv-Q4-qIr"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="5jx-2N-DCm"/>
+                    <connections>
+                        <outlet property="imageView" destination="wug-c8-mx3" id="EnY-ft-UZF"/>
+                        <outlet property="scrollView" destination="U5c-lJ-xyi" id="uLe-mj-boS"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Zpd-Fa-QOg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="975.36231884057975" y="-666.29464285714278"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="dbi-1w-MKw">
+            <objects>
+                <viewController id="Bym-FV-l44" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="srX-u6-Zow">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Photo" translatesAutoresizingMaskIntoConstraints="NO" id="fIU-aL-wue" userLabel="Avatar Image View">
+                                <rect key="frame" x="16" y="76" width="70" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="6aP-wk-Xxn"/>
+                                    <constraint firstAttribute="width" constant="70" id="z4E-dG-jGM"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hh7-4O-fU7" userLabel="Logout Button">
+                                <rect key="frame" x="366" y="100" width="24" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="iv9-Fp-RCk"/>
+                                    <constraint firstAttribute="width" constant="24" id="uEf-BJ-gdr"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="ipad.and.arrow.forward"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Екатерина Новикова" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QG5-g3-G67" userLabel="Name Label">
+                                <rect key="frame" x="16" y="154" width="382" height="28"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
+                                <color key="textColor" name="YP White"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@ekaterina_nov" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8yh-MJ-wPc" userLabel="Login Name Label">
+                                <rect key="frame" x="16" y="190" width="382" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" name="YP Gray"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello, world!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GcB-PN-KL4" userLabel="Description Label">
+                                <rect key="frame" x="16" y="214" width="382" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" name="YP White"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="mVI-fS-yys"/>
+                        <color key="backgroundColor" name="YP Black"/>
+                        <constraints>
+                            <constraint firstItem="GcB-PN-KL4" firstAttribute="leading" secondItem="mVI-fS-yys" secondAttribute="leading" constant="16" id="79K-6z-JXV"/>
+                            <constraint firstItem="fIU-aL-wue" firstAttribute="leading" secondItem="mVI-fS-yys" secondAttribute="leading" constant="16" id="BXI-ou-Lf3"/>
+                            <constraint firstItem="QG5-g3-G67" firstAttribute="leading" secondItem="mVI-fS-yys" secondAttribute="leading" constant="16" id="JKE-aN-768"/>
+                            <constraint firstItem="QG5-g3-G67" firstAttribute="top" secondItem="fIU-aL-wue" secondAttribute="bottom" constant="8" id="P6M-uB-61G"/>
+                            <constraint firstItem="mVI-fS-yys" firstAttribute="trailing" secondItem="8yh-MJ-wPc" secondAttribute="trailing" constant="16" id="UZH-Ob-lTT"/>
+                            <constraint firstItem="hh7-4O-fU7" firstAttribute="top" secondItem="mVI-fS-yys" secondAttribute="top" constant="56" id="WDd-cb-HfW"/>
+                            <constraint firstItem="GcB-PN-KL4" firstAttribute="top" secondItem="8yh-MJ-wPc" secondAttribute="bottom" constant="8" id="bet-Oy-sVd"/>
+                            <constraint firstItem="fIU-aL-wue" firstAttribute="top" secondItem="mVI-fS-yys" secondAttribute="top" constant="32" id="eNl-LL-Sak"/>
+                            <constraint firstItem="8yh-MJ-wPc" firstAttribute="top" secondItem="QG5-g3-G67" secondAttribute="bottom" constant="8" id="fEx-Pp-9Dc"/>
+                            <constraint firstItem="8yh-MJ-wPc" firstAttribute="leading" secondItem="mVI-fS-yys" secondAttribute="leading" constant="16" id="iaE-x0-Yuk"/>
+                            <constraint firstItem="mVI-fS-yys" firstAttribute="trailing" secondItem="hh7-4O-fU7" secondAttribute="trailing" constant="24" id="jAL-jG-rNS"/>
+                            <constraint firstItem="mVI-fS-yys" firstAttribute="trailing" secondItem="QG5-g3-G67" secondAttribute="trailing" constant="16" id="kcX-CV-NjU"/>
+                            <constraint firstItem="mVI-fS-yys" firstAttribute="trailing" secondItem="GcB-PN-KL4" secondAttribute="trailing" constant="16" id="oOj-ph-fNA"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="" image="tab_profile_active" id="k5J-M5-XPg"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FJx-4N-hrG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-693" y="104"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="rWO-pH-jqE">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="NNs-4v-f7P" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="tab_editorial_active" id="UV9-b8-gs6"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="LoV-nJ-nJc">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" name="YP White"/>
+                        <color key="barTintColor" name="YP White"/>
+                        <navigationBarAppearance key="standardAppearance">
+                            <color key="backgroundColor" name="YP Black"/>
+                        </navigationBarAppearance>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Avd-yj-rDS"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yJX-0i-EQO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-694.20289855072474" y="-667.63392857142856"/>
         </scene>
     </scenes>
     <resources>
+        <image name="0" width="200" height="132"/>
         <image name="18" width="200" height="300"/>
+        <image name="Backward" width="24" height="24"/>
+        <image name="Photo" width="70" height="70"/>
         <image name="favorites.fill" width="30" height="26"/>
+        <image name="ipad.and.arrow.forward" width="20" height="22"/>
+        <image name="share_button" width="50" height="50"/>
+        <image name="tab_editorial_active" width="20" height="22"/>
+        <image name="tab_profile_active" width="24" height="24"/>
         <namedColor name="YP Black">
             <color red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="YP Gray">
+            <color red="0.68235294117647061" green="0.68627450980392157" blue="0.70588235294117652" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="YP White">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
